--- a/pagina2.html
+++ b/pagina2.html
@@ -6,7 +6,63 @@
     <title>Pagina 2</title>
 </head>
 <body>
+    <div style="background-color: white;">
     <p>Olar</p>
+
+    <h1>Tabela</h1>
+    <table style="border: 2px solid blue;">
+        <caption>Cadeiras do curso</caption>
+        <tr>
+            <th colspan="2">Cadeira</th>
+            <td>Logica e algoritmo</td>
+            <td>Lab 1</th>
+        </tr>
+        <tr>
+            <th colspan="2">Professores</th>
+            <td>Joaquim</td>
+            <td>Pitthan</td>
+        </tr>
+        <tr>
+            <th colspan="2">Semestre</th>
+            <td>1</td>
+            <td>1</td>
+        </tr>
+    </table>
+
+    <ul>
+        <li>Tira</li>
+        <li>Que</li>
+        <li>Eu vou cagar</li>
+    </ul>
     
+    <ol type="A">
+        <li>Tu</li>
+        <li>é</li>
+        <li>cachorro</li>
+        <li>ne neymar</li>
+        <li>tu gosta de bater</li>
+    </ol>
+
+    <dl>
+        <dt>Site</dt>
+        <dd>Sim</dd>
+    </dl>
+
+    <iframe src="file:///C:/Users/jhsch/Desktop/css%20html/teste.html" height="200" width="300" title="Site da Google"></iframe>
+
+    <hr>
+
+    <code>x = 3; y = 4; z = 5</code>
+    <p>&lt &gt</p>
+
+    <form>
+        <label for="fname">Primeiro nome:</label><br>
+        <input placeholder="Digite seu nome" type="text" id="fname" name="fname" value=""><br>
+        <label for="lname">Sobrenome:</label><br>
+        <input placeholder="Digite seu sobrenome" type="text" id="lname" name="lname" value="">
+        <br>
+        <input type="submit" value="Enviar">
+    </form>
+
 </body>
 </html>
