--- a/teste.html
+++ b/teste.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+    body {
+           background-color: gray;
+    }
+    img {
+        border-top-style: dotted;
+        border-width: 10%;
+        border-style: ridge;
+        border-radius: 7%
+
+    }
+
+    h1 {
+        color: aqua;
+    }
+    
+    </style>
     <link rel="icon" type="image/x-icon" href="https://preview.redd.it/we-live-we-love-we-lie-v0-eps39t51qwob1.png?auto=webp&s=ddea232d9ccced332a95cf7340a1ea8c520059b7">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste html</title>
 </head>
+
+<link rel="teste" href="Untitled-1.css">
 <body>
     <html lang="pt-br"></html>
     <h1><mark>Olá</mark></h1>
