--- a/pagina2.html
+++ b/pagina2.html
@@ -20,6 +20,24 @@
             border-radius: 20%;
             background-image: url(https://media.tenor.com/lzu0s7w_UgIAAAAM/suarez-luis-suarez.gif)
         }
+        p {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        #tira{
+            display: inline;
+
+
+
+        }
+
+
+
+
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +67,7 @@
         </tr>
     </table>
 
-    <ul>
+    <ul id="tira">
         <li>Tira</li>
         <li>Que</li>
         <li>Eu vou cagar</li>
