--- a/html-css João Wolski/index.html
+++ b/html-css João Wolski/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="icon" type="image/x-icon" href="icon.png">
+    <link rel="icon" type="image/x-icon" href="imagens/icon.png">
     <link rel="stylesheet" href="stylesheet.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +11,14 @@
 
 
 </head>
-<body>
+<body> <!--usei quase todas as tags-->
     <header>
         <div id="headpg1"><h1 >Grêmio temporada 2023</i></h1></div>
     </header>
     <hr id="hrnav1">
     <nav id="navpg1">
         <a id="jogadores" href="jogadores.html"><b>Jogadores</b></a>
-        <a id="estatisticas" href="estatisticas.html"><b>Estatísticas</b></a>
+        <a id="mais" href="mais.html"><b>Mais</b></a>
     </nav>
     <hr id="hrnav1">
 
@@ -41,11 +41,11 @@
     </article>
     <section id="section1">
         <p>A temporada do Grêmio em 2023 começou no dia 17/01/2023 com o título da Recopa Gaúcho e a estreia de <mark>Luis Suárez</mark>, maior reforço da temporada.</p>
-        <a href="https://www.youtube.com/watch?v=9brjMLDEGwU" target="_blank"><img title="Suárez comemorando um de seus 3 gols na partida" alt="Suarez na primeira partida com o Grêmio" id="suarezsaoluiz" src="suarezsaoluiz.jpg" width="600" height="300"></a>
+        <a href="https://www.youtube.com/watch?v=9brjMLDEGwU" target="_blank"><img title="Suárez comemorando um de seus 3 gols na partida" alt="Suarez na primeira partida com o Grêmio" id="suarezsaoluiz" src="imagens/suarezsaoluiz.jpg" width="600" height="300"></a>
         <p>Na sequência veio o Campeonato Gaúcho, <i>vencido pelo Grêmio com certa tranquilidade</i>, com destaques para a vitória contra o rival <strong>Internacional</strong> por 1x0 e a vitória nos pênaltis contra o <strong>Ypiranga de Erechim.</strong></p>
-        <a href="https://www.youtube.com/watch?v=VaVu8pMZ_Nk" target="_blank"><img title="Vitória no Grenal" alt="Vitória no Grenal" id="grenal1" src="grenal1.jpg" width="600" height="300"></a>
+        <a href="https://www.youtube.com/watch?v=VaVu8pMZ_Nk" target="_blank"><img title="Vitória no Grenal" alt="Vitória no Grenal" id="grenal1" src="imagens/grenal1.jpg" width="600" height="300"></a>
         <p>Logo após a final contra o Caxias começa o Campeonato Brasileiro, marcado pelo retorno do Grêmio à elite da competição. O primeiro turno inicia com alguns tropeços do tricolor, que logo se recupera e passa a apresentar um futebol surpreendente para um elenco sem entrosamento e montado do zero.</p>
-        <a href="https://www.youtube.com/watch?v=trdUsEUHATM" target="_blank"><img title="Suarez comemorando gol no grenal no brasileirão" alt="Grenal no brasileirão: 3x1" id="grenal2" src="suarezgrenal.jpg" width="600" height="300"></a>
+        <a href="https://www.youtube.com/watch?v=trdUsEUHATM" target="_blank"><img title="Suarez comemorando gol no grenal no brasileirão" alt="Grenal no brasileirão: 3x1" id="grenal2" src="imagens/suarezgrenal.jpg" width="600" height="300"></a>
         <p>O ano também se destaca pela campanha na Copa do Brasil, na qual o elenco chegou até as semi-finais sendo derrotado para o Flamengo. No momento da escrita desse texto o 2º turno do Brasileirão ainda estava em andamento</p>
     </section>
 
@@ -53,16 +53,11 @@
         <div id="footerpg1"><pre>
 
 
-            Feito por: João Henrique Scherer Wolski
+            Feito por: @joaohsw
 
             Contato: <a id="emailfooter" href="mailto:jhswolski@inf.usfm.br">jhswolski@inf.ufsm.br</a>
         
         </pre></div>
-
-
-
-
-
     </footer>
 </body>
 </html>
